GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :
       
    - 1.21alpha27 :
    
        - epykota's --prototype option now works fine with accounts
          limited by balance.
          
    - 1.21alpha26 :
    
        - Fixed the handling of the 'maxdenybanners' directive.
        
        - Introduced the 'denyduplicates' directive.
        
        - Fixed some database related glitches.
        
    - 1.21alpha25 :
    
        - The job's size is now always precomputed, even when
          'enforcement' is not set to 'strict'.
          
        - Introduction of the new 'trustjobsize' configuration directive
          to workaround some problematic printers. See the sample
          configuration file for details.
          
    - 1.21alpha24 :
    
        - Big database structure changes. An upgrade script
          is now included for PostgreSQL. LDAP users may just
          want to copy the new schema in place.
          
        - edpykota now recognizes the -o | --overcharge command line
          option to set an overcharging or undercharging factor
          on each print job's cost for a particular user.
          
        - repykota's output format has changed an is not limited to  
          80 characters wide anymore. People who used to parse 
          repykota's output in their own tools are strongly advised
          to parse dumpykota's output instead.
          
        - Introduction of the new 'maxdenybanners' configuration directive
          to allow up to N (the directive's value) deny banners to be
          printed even if the print account is forbidden to print.
          
        - Better detection of the number of copies in the PostScript parser.
        